--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ google:
 google_site_verification :
 bing_site_verification   :
 yandex_site_verification :
-naver_site_verification  :
+naver_site_verification  : "836613dc56122290cbd68f87f1c9ffd4ab8ecb88"
 
 # Social Sharing
 twitter:
