--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,23 @@ main:
     url: /categories/
   - title: "Tag"
     url: /tags/
+  - title: "Search"
+    url: /search/
+
+docs:
+  - title: "Contents"
+    children: 
+      - title: "Category"
+        url: /categories/
+      - title: "Tag"
+        url: /tags/
+
+  - title: "Contents2"
+    children: 
+      - title: "Category"
+        url: /categories/
+      - title: "Tag"
+        url: /tags/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
