--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,19 +8,16 @@ main:
     url: /search/
 
 docs:
-  - title: "Contents"
-    children: 
-      - title: "Category"
-        url: /categories/
-      - title: "Tag"
-        url: /tags/
+  - title: "AI"
+    url: /categories/#ai/
 
-  - title: "Contents2"
-    children: 
-      - title: "Category"
-        url: /categories/
-      - title: "Tag"
-        url: /tags/
+  # - title: "Contents2"
+  #   children: 
+  #     - title: "Category"
+  #       url: /categories/
+  #     - title: "Tag"
+  #       url: /tags/
+
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
