--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,11 +6,20 @@ main:
     url: /tags/
   - title: "Search"
     url: /search/
+  - title: "About"
+    url: /about/
 
 docs:
   - title: "AI"
     url: /categories/#ai/
-
+  - title: "Engineering"
+    url: /categories/#engineering/
+  - title: "Nature"
+    url: /categories/#nature/  
+  - title: "Research"
+    url: /categories/#research/
+  - title: "Entrepreneurship"
+    url: /categories/#entrepreneurship
   # - title: "Contents2"
   #   children: 
   #     - title: "Category"
