bunch of files updated

--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Maro Jeon"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am a researcher, an engineer, an AI/ML developer and a nature lover"
+  bio              : "My goal is to create a product with AI. I am really into nature/science/engineering."
   location         : "South Korea"
   email            :
   links:
